[package]
name = "cosmosvote-governance"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "CosmosVote governance contract — on-chain proposals and token-weighted voting on Stellar Soroban"
repository = "https://github.com/your-org/cosmosvote"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
proptest = "1.6.0"
cosmosvote-token = { path = "../token", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
