[package]
name = "cosmosvote-token"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "CosmosVote governance token contract — SEP-41 compatible token on Stellar Soroban"
repository = "https://github.com/PrincessnJoy/cosmosvote"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
